# ELTE

./: .gitignore  README.md
Hunter/: CMakeLists.txt  Elephant.cpp  Elephant.h  Hunter.cpp  Hunter.h  Lion.cpp  Lion.h  Rhinoceros.cpp  Rhinoceros.h  WildAnimal.cpp  WildAnimal.h  main.cpp
PetrolStation/: CMakeLists.txt  Charger.cpp  Charger.h  Customer.cpp  Customer.h  PayDesk.cpp  PayDesk.h  PetrolStation.cpp  PetrolStation.h  main.cpp
Set_with_tests/: CMakeLists.txt  beadando1doc.docx  input1.txt  input2.txt  main.cpp
algozh/: CMakeLists.txt  ExamCalculator.cpp  ExamCalculator.h  main.cpp  test.txt
beadando2/: CMakeLists.txt  beadando2.docx  input.txt  input2.txt  main.cpp
beadando2/Catch_tests/: CMakeLists.txt  FCA_tests.cpp
beadando2/Fishing_competition_analyzer_lib/: App.cpp  App.h  CMakeLists.txt  FC_analyzer.cpp  FC_analyzer.h
beadando3/: App.cpp  App.h  Bird.cpp  Bird.h  CMakeLists.txt  Dog.cpp  Dog.h  Fish.cpp  Fish.h  Person.cpp  Person.h  Pet.cpp  Pet.h  beadando3nobinary.rar  beadando3wbinary.rar  main.cpp  test.txt
dividedBy3/: input.txt
mostCommonFirstName/: CMakeLists.txt  input.txt  main.cpp  mostCommonFirstName.rar
restaurant/: CMakeLists.txt  badformat.txt  beadando2.docx  etterem01.docx  input.txt  main.cpp
restaurant/Catch_tests/: CMakeLists.txt  RA_tests.cpp
restaurant/Restaurant_analyzer_lib/: App.cpp  App.h  CMakeLists.txt  Restaurant_analyzer.cpp  Restaurant_analyzer.h
restaurant2/: CMakeLists.txt  etterem02.docx  input.txt
restaurant2/CatchTests/: CMakeLists.txt  RATests.cpp
restaurant2/RestaurantAnalyzer_lib/: App.cpp  App.h  CMakeLists.txt  RestaurantAnalyzer.cpp  RestaurantAnalyzer.h
set/Set_lib/: Set.cpp
webf/: index.html
(+29 files in other folders)
